Generally use URIs instead of URLs.
This is somewhat strange, since many places very explicitly want URLs,
but since all the URL constructors are deprecated, the URI class is the
only officially supported way to manipulate URLs, so just convert to URLs
as late as possible in general.